--- a/environments/ProxyH.yml
+++ b/environments/ProxyH.yml
@@ -6,9 +6,8 @@ dependencies:
   - python=3.7
   - iris=3.0.1
   - metoffice-afterburner=1.3.*
-  - cdsapi=0.5.*
-  - plotly=4.14.3
-  - dash=1.20.0
   - cmocean=2.0
 # Optional, code formatter
   - black
+# Optional - documentation generator
+  - sphinx=3.*.*
