--- a/environments/ProxyH.yml
+++ b/environments/ProxyH.yml
@@ -1,13 +1,13 @@
 name: ProxyH
 channels:
-  - default
+  - defaults
   - conda-forge
 dependencies:
-  - python=3.7
-  - iris=3.0.1
-  - metoffice-afterburner=1.3.*
+  - python=3.9
+  - iris=3.0
+  - metoffice-afterburner=1.3
   - cmocean=2.0
 # Optional, code formatter
   - black
 # Optional - documentation generator
-  - sphinx=3.*.*
+  - sphinx=3
