--- a/environments/ProxyH.yml
+++ b/environments/ProxyH.yml
@@ -4,10 +4,11 @@ channels:
   - conda-forge
 dependencies:
   - python=3.9
-  - iris=3.0
+  - iris=3.2
+  - mo_pack=0.2
   - metoffice-afterburner=1.3
   - cmocean=2.0
 # Optional, code formatter
   - black
 # Optional - documentation generator
-  - sphinx=3
+  - sphinx=4.5
