Added 3-day mogreps forecast video.

--- a/environments/ProxyH.yml
+++ b/environments/ProxyH.yml
@@ -8,6 +8,8 @@ dependencies:
   - mo_pack=0.2
   - metoffice-afterburner=1.3
   - cmocean=2.0
+  - svt-av1=0.9 # Old version required by ffmpeg
+  - ffmpeg=5.0
 # Optional, code formatter
   - black
 # Optional - documentation generator
